--- a/build.gradle
+++ b/build.gradle
@@ -12,23 +12,23 @@ repositories {
 	mavenCentral()
 }
 
-//ext {
-//	set('springCloudVersion', "Hoxton.SR3")
-//}
+ext {
+	set('springCloudVersion', "Hoxton.SR3")
+}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 }
 
-//dependencyManagement {
-//	imports {
-//		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-//	}
-//}
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
 
 test {
 	useJUnitPlatform()
